packages/related/test/tests/test_plan_execution/logs/snapshots/node/error_in_source_function.spec.js.txt
------------ 2 executions to run ------------
1 with worker_thread (node_worker_thread@<mock>)
1 with child_process (node_child_process@<mock>)
---------------------------------------------

✖ error_in_source_function.spec.js [worker_thread/<mock>/<mock>] 1/2 (1 failed, 1 remaining)
--------------- error ----------------
1 | export const doSomething = () => {
2 |   throw new Error("something");
            ^
Error: something
  at doSomething (<mock>/something.js:2:9)
  at <mock>/error_in_source_function.spec.js:3:1
--------------------------------------
✖ error_in_source_function.spec.js [child_process/<mock>/<mock>] 2/2 (all failed)
--------------- error ----------------
1 | export const doSomething = () => {
2 |   throw new Error("something");
            ^
Error: something
  at doSomething (<mock>/something.js:2:9)
  at <mock>/error_in_source_function.spec.js:3:1
--------------------------------------

------------------ summary ------------------
2 executions: all failed
duration: <mock>
---------------------------------------------